--- a/Julia-OBE.ipynb
+++ b/Julia-OBE.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "c063c73a-6276-4614-a258-26bba2b564a5",
+   "metadata": {},
+   "source": [
+    "# JULIA OPTICAL BLOCH EQUATIONS"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e805ca8a-5cfc-4420-84f7-c3cb41abaf6a",
+   "metadata": {},
+   "source": [
+    "### Libraries\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "6b34da54-1bd6-4f34-ae3d-f4974917a71c",
@@ -25,6 +41,22 @@
     "using LinearAlgebra\n",
     "\n",
     "np = pyimport(\"numpy\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f08636aa-0313-4b43-a36b-ecef4c3bbef4",
+   "metadata": {},
+   "source": [
+    "### Functions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c6492253-57ef-4540-9540-d70ca1b51917",
+   "metadata": {},
+   "source": [
+    "#### Density Matrix"
    ]
   },
   {
@@ -88,6 +120,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c1d53c29-41a3-4399-8598-26dd9a08ef56",
+   "metadata": {},
+   "source": [
+    "#### Create a Hamiltonian"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "916f5116-fdaf-4d22-afe5-0eb5be007da5",
@@ -125,6 +165,14 @@
     "    end\n",
     "    return np.matrix(H/2)\n",
     "end"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c4d9dbb7-9a76-4c41-9f4d-7269c83982e8",
+   "metadata": {},
+   "source": [
+    "#### Decay Operator\n"
    ]
   },
   {
@@ -184,6 +232,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9adbb230-644d-4104-94d0-c70e016867ac",
+   "metadata": {},
+   "source": [
+    "#### The dephasing due to the laser linewidths"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "6ddeb75e-58bb-4b75-8909-e539745c368a",
@@ -236,6 +292,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2c06b6fe-1955-4eea-b38c-a16641457d6e",
+   "metadata": {},
+   "source": [
+    "### MASTER EQUATION"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "id": "72402451-3d33-4d28-947a-687d2ec71fea",
@@ -273,6 +337,14 @@
     "    dens_mat = def_rho_matrix(levels)\n",
     "    return -1im*(H_tot*dens_mat - dens_mat*H_tot) + L\n",
     "end\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7c0100d5-8795-4648-a64d-5e523f14675e",
+   "metadata": {},
+   "source": [
+    "#### Master Matrix"
    ]
   },
   {
@@ -325,6 +397,14 @@
     "    end    \n",
     "    return coeff_matrix\n",
     "end"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "79fb8131-eafe-45fd-bda0-da9eb4a3a343",
+   "metadata": {},
+   "source": [
+    "#### Singular Value Decomposition"
    ]
   },
   {
@@ -384,6 +464,14 @@
     "    rho_norm = rho*t\n",
     "    return rho_norm\n",
     "end"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f1925126-9c38-42c5-9f05-4cab17ba6814",
+   "metadata": {},
+   "source": [
+    "#### Steady state solution for the density matrix "
    ]
   },
   {
@@ -448,6 +536,14 @@
     "    soln = SVD(rho_coeffs)\n",
     "    return soln\n",
     "end"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "23dc77fe-0175-41ba-9e19-09600a3d450c",
+   "metadata": {},
+   "source": [
+    "#### Obviously because every parameter step requires solving an eigenvalue problem, this method is NOT fast. However it does allow you to compute results for parameters outside of the weak probe regime (defined as). If your system is in the weak probe regime, there are explicit analytic solutions, especially for low numbers of levels (usually <5)."
    ]
   },
   {
@@ -573,6 +669,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "dd68189d-6d90-4a14-be27-60807f25ba4e",
+   "metadata": {},
+   "source": [
+    "#### Analytic solution for an arbitrary number of levels"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "id": "c6c76425-2099-4799-8a51-fb759e868bf6",
@@ -625,6 +729,14 @@
     "    return 1im*(np.sum(Deltas[1:n+1])) - (Gammas[n+1]/2) - np.sum(\n",
     "        gammas[1:n+1])\n",
     "end\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f53ae578-31a4-48b0-985b-30a6d7df960a",
+   "metadata": {},
+   "source": [
+    "#### Time evolution operator "
    ]
   },
   {
@@ -697,6 +809,14 @@
     "    \"\"\"    \n",
     "    return np.matmul(time_op(operator, t), psi_0)\n",
     "end"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9a1e7aa5-d032-49ef-9cc6-78f14660cb0b",
+   "metadata": {},
+   "source": [
+    "#### Matrix of time-independent coefficients  $\\hat{M}$ found from the Master equation\n"
    ]
   },
   {
