--- a/julia_OBE_funtions.ipynb
+++ b/julia_OBE_funtions.ipynb
@@ -20,7 +20,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "6b34da54-1bd6-4f34-ae3d-f4974917a71c",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -35,7 +37,7 @@
    ],
    "source": [
     "using GenericLinearAlgebra\n",
-    "using SymPy\n",
+    "using SymPy \n",
     "using PyCall\n",
     "using PyPlot\n",
     "using LinearAlgebra\n",
@@ -63,7 +65,9 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "c3a750b3-4a7a-4bfe-ba0f-2400e4bd6d21",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -85,14 +89,16 @@
     "        end\n",
     "    end\n",
     "    return rho_list #!Revisar lo de la asignación con las variables globales\n",
-    "end"
+    "end\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "id": "c0741f4a-8356-4216-9ff5-67947d4d6ddc",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -122,16 +128,23 @@
   {
    "cell_type": "markdown",
    "id": "c1d53c29-41a3-4399-8598-26dd9a08ef56",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
-    "#### Create a Hamiltonian"
+    "#### Create differents Hamiltonians"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "id": "916f5116-fdaf-4d22-afe5-0eb5be007da5",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -168,6 +181,149 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "a2739079-5d50-4dab-b6cc-9b2a52f37ce7",
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Hamil (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "function Hamil(Omegas, Deltas)\n",
+    "    #Given lists of Rabi frequencies and detunings, construct interaction \n",
+    "    \"\"\"\n",
+    "    Hamiltonian (assuming RWA and dipole approximation) as per equation 14. \n",
+    "    h_bar = 1 for simplicity.\n",
+    "    Both lists should be in ascending order (Omega_12, Omega_23 etc) \"\"\"\n",
+    "    levels = length(Omegas)+1\n",
+    "    H = np.zeros((levels,levels),dtype=\"float\")\n",
+    "    #H = zeros(ComplexF64, length(levels), length(levels))\n",
+    "    for i in 1:levels\n",
+    "        for j in 1:levels\n",
+    "            if i==j && i!=1\n",
+    "                H[i,j]= Deltas[i-1]\n",
+    "            elseif i!=j && i==1\n",
+    "                H[i,j]= Omegas[i]\n",
+    "            elseif i!=j && j==1 \n",
+    "                H[i,j]= Omegas[j]\n",
+    "            end\n",
+    "        end\n",
+    "    end\n",
+    "    return np.matrix(H)\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "febe9671-701d-4651-8e42-efadbc5fdb6b",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "LoadError",
+     "evalue": "MethodError: \u001b[0mCannot `convert` an object of type \u001b[92mSymbol\u001b[39m\u001b[0m to an object of type \u001b[91mSym\u001b[39m\n\n\u001b[0mClosest candidates are:\n\u001b[0m  convert(::Type{T}, \u001b[91m::AbstractChar\u001b[39m) where T<:Number\n\u001b[0m\u001b[90m   @\u001b[39m \u001b[90mBase\u001b[39m \u001b[90m\u001b[4mchar.jl:185\u001b[24m\u001b[39m\n\u001b[0m  convert(::Type{<:Number}, \u001b[91m::SciMLOperators.ScalarOperator\u001b[39m)\n\u001b[0m\u001b[90m   @\u001b[39m \u001b[36mSciMLOperators\u001b[39m \u001b[90m~/.julia/packages/SciMLOperators/3v6Oj/src/\u001b[39m\u001b[90m\u001b[4mscalar.jl:156\u001b[24m\u001b[39m\n\u001b[0m  convert(::Type{N}, \u001b[91m::DomainSets.Point{<:Number}\u001b[39m) where N<:Number\n\u001b[0m\u001b[90m   @\u001b[39m \u001b[32mDomainSets\u001b[39m \u001b[90m~/.julia/packages/DomainSets/0afEf/src/domains/\u001b[39m\u001b[90m\u001b[4mpoint.jl:14\u001b[24m\u001b[39m\n\u001b[0m  ...\n",
+     "output_type": "error",
+     "traceback": [
+      "MethodError: \u001b[0mCannot `convert` an object of type \u001b[92mSymbol\u001b[39m\u001b[0m to an object of type \u001b[91mSym\u001b[39m\n\n\u001b[0mClosest candidates are:\n\u001b[0m  convert(::Type{T}, \u001b[91m::AbstractChar\u001b[39m) where T<:Number\n\u001b[0m\u001b[90m   @\u001b[39m \u001b[90mBase\u001b[39m \u001b[90m\u001b[4mchar.jl:185\u001b[24m\u001b[39m\n\u001b[0m  convert(::Type{<:Number}, \u001b[91m::SciMLOperators.ScalarOperator\u001b[39m)\n\u001b[0m\u001b[90m   @\u001b[39m \u001b[36mSciMLOperators\u001b[39m \u001b[90m~/.julia/packages/SciMLOperators/3v6Oj/src/\u001b[39m\u001b[90m\u001b[4mscalar.jl:156\u001b[24m\u001b[39m\n\u001b[0m  convert(::Type{N}, \u001b[91m::DomainSets.Point{<:Number}\u001b[39m) where N<:Number\n\u001b[0m\u001b[90m   @\u001b[39m \u001b[32mDomainSets\u001b[39m \u001b[90m~/.julia/packages/DomainSets/0afEf/src/domains/\u001b[39m\u001b[90m\u001b[4mpoint.jl:14\u001b[24m\u001b[39m\n\u001b[0m  ...\n",
+      "",
+      "Stacktrace:",
+      " [1] setindex!",
+      "   @ ./array.jl:971 [inlined]",
+      " [2] hamilsym(Omegas::Vector{Float64}, k::Float64, x::Int64)",
+      "   @ Main ./In[44]:13",
+      " [3] top-level scope",
+      "   @ In[44]:30"
+     ]
+    }
+   ],
+   "source": [
+    "using Symbolics, LinearAlgebra\n",
+    "\n",
+    "function hamilsym(Omegas, k, x)\n",
+    "    levels = length(Omegas) + 1\n",
+    "    Omega = Omegas[1]  # Assuming you want the first element from the list\n",
+    "    symdeltas = [Symbol(\"Delta$i\") for i in 1:levels]\n",
+    "\n",
+    "    H = Matrix{Sym}(undef,levels,levels)\n",
+    "\n",
+    "    for i in 1:levels\n",
+    "        for j in 1:levels\n",
+    "            if i == j && i != 1\n",
+    "                H[i, j] = symdeltas[i]\n",
+    "            else\n",
+    "                H[i, j] = 0\n",
+    "            end\n",
+    "        end\n",
+    "    end\n",
+    "\n",
+    "    H[1, 2] = -Omega * exp(1im * k * x)\n",
+    "    H[1, 3] = -Omega * exp(-1im * k * x)\n",
+    "    H[2, 1] = Omega * exp(-1im * k * x)\n",
+    "    H[3, 1] = Omega * exp(1im * k * x)\n",
+    "\n",
+    "    return H\n",
+    "end\n",
+    "\n",
+    "Omegas = [1.398e9, 1.398e9]\n",
+    "k = 1.06e7\n",
+    "result = hamilsym(Omegas, k, 1)\n",
+    "display(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "90799e70-df0a-43f3-bba6-e628ea0113b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "OBE_matrix (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "function OBE_matrix(Master_matrix)\n",
+    "\n",
+    "    levels = size(Master_matrix,1)\n",
+    "    rho_vector = create_rho_list(levels)\n",
+    "    coeff_matrix = np.zeros((levels^2, levels^2), dtype = \"complex\")\n",
+    "    count = 1\n",
+    "    for i in 1:levels\n",
+    "        for j in 1:levels\n",
+    "            entry = Master_matrix[i,j]\n",
+    "            expanded = sympy.expand(entry)\n",
+    "            #use Sympy coeff to extract coefficient of each element in rho_vect\n",
+    "            for (n,r) in enumerate(rho_vector)\n",
+    "                coeff_matrix[count, n] = complex(expanded.coeff(sympy.sympify(r)))\n",
+    "            end \n",
+    "            count += 1\n",
+    "        end\n",
+    "    end    \n",
+    "    return coeff_matrix\n",
+    "end"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "c4d9dbb7-9a76-4c41-9f4d-7269c83982e8",
    "metadata": {},
@@ -177,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "c318633b-549c-402d-bda6-76382e3eabb1",
    "metadata": {},
    "outputs": [
@@ -187,7 +343,7 @@
        "L_decay (generic function with 1 method)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "6ddeb75e-58bb-4b75-8909-e539745c368a",
    "metadata": {},
    "outputs": [
@@ -251,7 +407,7 @@
        "L_dephasing (generic function with 1 method)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "72402451-3d33-4d28-947a-687d2ec71fea",
    "metadata": {},
    "outputs": [
@@ -311,7 +467,7 @@
        "Master_eqn (generic function with 1 method)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,12 +500,12 @@
    "id": "7c0100d5-8795-4648-a64d-5e523f14675e",
    "metadata": {},
    "source": [
-    "#### Master Matrix"
+    "#### Optical Bloch Matrix"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "3728d2d2-fe00-46d2-8417-efb89d0dd843",
    "metadata": {},
    "outputs": [
@@ -359,7 +515,7 @@
        "OBE_matrix (generic function with 1 method)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "680faeb7-61c2-47c2-9f90-58322046e158",
    "metadata": {},
    "outputs": [
@@ -419,7 +575,7 @@
        "SVD (generic function with 1 method)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "8e49b392-29df-4fa2-a3b4-6bfcdf3c27d9",
    "metadata": {},
    "outputs": [
@@ -486,7 +642,7 @@
        "steady_state_soln (generic function with 2 methods)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -548,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "54bfee3d-403d-4a69-ae45-268f6971f056",
    "metadata": {},
    "outputs": [
@@ -558,7 +714,7 @@
        "fast_3_level (generic function with 2 methods)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -609,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "49dae06b-bd3c-4d77-85e3-4843153392d7",
    "metadata": {},
    "outputs": [
@@ -619,7 +775,7 @@
        "fast_4_level (generic function with 2 methods)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -678,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "c6c76425-2099-4799-8a51-fb759e868bf6",
    "metadata": {},
    "outputs": [
@@ -688,7 +844,7 @@
        "term_n (generic function with 2 methods)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -741,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "138180a6-3167-42d8-ac24-b3d35145fb49",
    "metadata": {},
    "outputs": [
@@ -751,7 +907,7 @@
        "time_op (generic function with 1 method)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -776,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "a885df2f-b4a9-4e97-9241-9e8ae531bc38",
    "metadata": {},
    "outputs": [
@@ -786,7 +942,7 @@
        "time_evolve (generic function with 1 method)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -821,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "6bd62e96-2189-48df-a903-853fc1dd6b22",
    "metadata": {},
    "outputs": [
@@ -831,13 +987,13 @@
        "time_dep_matrix (generic function with 2 methods)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "function time_dep_matrix(Omegas, Deltas, Gammas, gammas = [])\n",
+    "function time_dep_matrix(Omegas, Deltas, Gammas,k,x,gammas = [])\n",
     "    \"\"\"\n",
     "    Given lists of parameters (all in order of lowers to highest energy level), \n",
     "    construct matrix of coefficients for time evolution of \n",
@@ -873,10 +1029,199 @@
     "    else\n",
     "        L_tot = L_atom\n",
     "    end\n",
-    "    H = Hamiltonian(Omegas, Deltas) #create the total Hamiltonian\n",
+    "    H = Hamil3(Omegas, Deltas,k,x) #create the total Hamiltonian\n",
     "    Master = Master_eqn(H, L_tot) \n",
     "    rho_coeffs = OBE_matrix(Master) #create matrix of coefficients\n",
     "    return rho_coeffs\n",
+    "end\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "bbecc592-abbb-4737-bc68-070f519d5132",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "force_operator (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "function force_operator(Omegas,k,x)\n",
+    "    \"\"\"\n",
+    "    Given lists of parameters (all in order of lowers to highest energy level), \n",
+    "    construct force operator.\n",
+    "\n",
+    "    Args:\n",
+    "        Omegas (list of floats): Rabi frequencies of fields coupling each pair \n",
+    "            of states in the ladder, from lowest to highest energy states \n",
+    "            (Omega_{12}, ..., Omega{n-1,n} for n levels).\n",
+    "        \n",
+    "    Returns:\n",
+    "        ndarray: n^2 x n^2 array (for an n-level system) representing force operator calculated\n",
+    "        as per hamilton equations, d(d dot E)/dx=F.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    levels = 3 \n",
+    "    Omega = Omegas[1]   \n",
+    "    F = zeros(ComplexF64, levels, levels)\n",
+    "    \n",
+    "    for i in 1:levels\n",
+    "        for j in 1:levels\n",
+    "            if(i==j)\n",
+    "                F[i,j] = 0.0\n",
+    "            end\n",
+    "            \n",
+    "        end\n",
+    "    end\n",
+    "    F[1,2] = -Omega*ℯ^(1im*k*x)\n",
+    "    F[1,3] = -Omega*ℯ^(-1im*k*x)\n",
+    "    F[2,1] = Omega*ℯ^(-1im*k*x)\n",
+    "    F[3,1] = Omega*ℯ^(1im*k*x)\n",
+    "    return F\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "3d997cb2-034c-4053-8c65-dc492399538b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "update_detuning (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "function update_detuning(Deltas,Delta_0,g,mu_B,B,k,v_x)       \n",
+    "        Deltas[1] = Delta_0 + g*mu_B*B+k*v_x\n",
+    "        Deltas[2] = Delta_0 - g*mu_B*B-k*v_x\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "d46d0bb5-702e-4d94-ba49-88ea1e70481c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "expected_value (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "function expected_value(operator, density_matrix)\n",
+    "    expected = sum(diag(density_matrix*operator))\n",
+    "    return expected\n",
+    "end\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "34361f78-ec46-4ce2-8b20-53955944c922",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "update_velocity_position (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "function update_velocity_position(x,y,vx,vy,dt,F)\n",
+    "    \n",
+    "    force = F\n",
+    "    \n",
+    "    \n",
+    "    theta = atan(y/x)\n",
+    "    fx = force\n",
+    "    fy = 0.0 \n",
+    "\n",
+    "    #update vel and pos \n",
+    "    vx += fx * dt\n",
+    "    vy += fy * dt\n",
+    "    x += vx * dt\n",
+    "    y += vy * dt\n",
+    "\n",
+    "    return x,y,vx,vy\n",
+    "\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "187dab67-8f0a-4dca-a868-a35d9391530c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sym[Delta1, Delta2]"
+     ]
+    }
+   ],
+   "source": [
+    "function create_deltas(levels = 3)\n",
+    "    cdeltas = Sym[]\n",
+    "    for i in 1:levels\n",
+    "        push!(cdeltas,Sym(\"Delta$(i)\"))\n",
+    "        \n",
+    "    end\n",
+    "    return cdeltas #!Revisar lo de la asignación con las variables globales\n",
+    "end\n",
+    "print(create_deltas(2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "916c1391-6526-4bfb-8e1f-323588d52c42",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "update_detuning (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "function update_detuning(Deltas,Delta_0,g,mu_B,B,k,v_x)       \n",
+    "        Deltas[1] = Delta_0 + g*mu_B*B+k*v_x\n",
+    "        Deltas[2] = Delta_0 - g*mu_B*B-k*v_x\n",
     "end"
    ]
   }
